[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
linked_list_allocator = "0.10"
risc0-groth16 = { version = "3.0.2", default-features=false }
serde_json = {version = "1.0.145", default-features = false, features = ["alloc"] }
sbi="0.3"
riscv-rt={version="0.14", features=["s-mode"]}
anyhow = {version = "1.0.100", default-features = false }

[profile.release]
opt-level = "z"
lto = true   
codegen-units = 1   

[[bin]]
name = "groth16-verifier"
path = "src/main.rs"